--- a/package.json
+++ b/package.json
@@ -1,26 +1,35 @@
 {
-  "name": "coinbase-clone-app-ts",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "expo": "~46.0.8",
-    "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.4",
-    "react-native-web": "~0.18.7"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
-    "@types/react-native": "~0.69.1",
-    "typescript": "~4.3.5"
-  },
-  "private": true
+    "name": "coinbase-clone-app-ts",
+    "version": "1.0.0",
+    "main": "node_modules/expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web"
+    },
+    "dependencies": {
+        "@react-navigation/bottom-tabs": "^6.3.2",
+        "@react-navigation/native": "^6.0.11",
+        "@react-navigation/stack": "^6.2.2",
+        "expo": "~46.0.8",
+        "expo-haptics": "^11.3.0",
+        "expo-status-bar": "~1.4.0",
+        "react": "18.0.0",
+        "react-dom": "18.0.0",
+        "react-native": "0.69.4",
+        "react-native-draggable-flatlist": "^3.1.2",
+        "react-native-reanimated": "^2.10.0",
+        "react-native-web": "~0.18.7",
+        "react-native-webview": "^11.23.0",
+        "react-redux": "^8.0.2",
+        "redux-thunk": "^2.4.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.12.9",
+        "@types/react": "17.0.39",
+        "@types/react-native": "^0.69.5",
+        "typescript": "~4.3.5"
+    },
+    "private": true
 }
